--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
 python-dotenv
 PyPDF2
-langchain
 langchain-google-genai
-langchain-community
-chromadb
 streamlit-extras
 groq
+chromadb==0.4.24
+langchain==0.1.16
+langchain-community==0.0.32
